--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
