--- a/backends/nodejs/package.json
+++ b/backends/nodejs/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
+    "better-sqlite3": "^8.7.0",
     "express": "^4.18.2",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
   }
