--- a/backends/nodejs/package.json
+++ b/backends/nodejs/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.8.0",
     "better-sqlite3": "^8.7.0",
     "express": "^4.18.2",
+    "sharp": "^0.32.6",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
